// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard snapshots courses loaded, show select session modal snapshot 1`] = `
<div
  className="d-flex flex-column p-2 pt-0"
  id="dashboard-container"
>
  <h1
    className="sr-only"
  >
    test-page-title
  </h1>
  <Fragment>
    <DashboardModalSlot />
    <SelectSessionModal />
  </Fragment>
  <div
    data-testid="dashboard-content"
    id="dashboard-content"
  >
    <DashboardLayout>
      <CoursesPanel />
    </DashboardLayout>
  </div>
</div>
`;

exports[`Dashboard snapshots courses still loading snapshot 1`] = `
<div
  className="d-flex flex-column p-2 pt-0"
  id="dashboard-container"
>
  <h1
    className="sr-only"
  >
    test-page-title
  </h1>
  <div
    data-testid="dashboard-content"
    id="dashboard-content"
  >
    <LoadingView />
  </div>
</div>
`;

exports[`Dashboard snapshots there are no courses snapshot 1`] = `
<div
  className="d-flex flex-column p-2 pt-0"
  id="dashboard-container"
>
  <h1
    className="sr-only"
  >
    test-page-title
  </h1>
  <Fragment>
    <DashboardModalSlot />
  </Fragment>
  <div
    data-testid="dashboard-content"
    id="dashboard-content"
  >
    <DashboardLayout>
      <CoursesPanel />
    </DashboardLayout>
  </div>
</div>
`;
